--- a/graphs.ipynb
+++ b/graphs.ipynb
@@ -249,28 +249,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feb</th>\n",
+       "      <th>Mar</th>\n",
+       "      <th>Apr</th>\n",
+       "      <th>May</th>\n",
+       "      <th>Jun</th>\n",
+       "      <th>Jul</th>\n",
+       "      <th>Aug</th>\n",
+       "      <th>Sep</th>\n",
+       "      <th>Oct</th>\n",
+       "      <th>Nov</th>\n",
+       "      <th>Dec</th>\n",
+       "      <th>Jan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>140</td>\n",
+       "      <td>163</td>\n",
+       "      <td>167</td>\n",
+       "      <td>142</td>\n",
+       "      <td>171</td>\n",
+       "      <td>174</td>\n",
+       "      <td>177</td>\n",
+       "      <td>200</td>\n",
+       "      <td>225</td>\n",
+       "      <td>240</td>\n",
+       "      <td>345</td>\n",
+       "      <td>370</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Feb    140\n",
-       "Mar    163\n",
-       "Apr    167\n",
-       "May    142\n",
-       "Jun    171\n",
-       "Jul    174\n",
-       "Aug    177\n",
-       "Sep    200\n",
-       "Oct    225\n",
-       "Nov    240\n",
-       "Dec    345\n",
-       "Jan    370\n",
-       "Name: 0, dtype: int64"
+       "   Feb  Mar  Apr  May  Jun  Jul  Aug  Sep  Oct  Nov  Dec  Jan\n",
+       "0  140  163  167  142  171  174  177  200  225  240  345  370"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
